--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,15 +1,20 @@
 /* Nav Bar */
+.body {
+    background-color: grey;
+}
 .navbar {
     font-size: 30px;
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+    margin-top: 20px;
     background-color: black;
     overflow: hidden;
     font-family: Arial, Helvetica, sans-serif;
+    float: none;
+    width: 100%;
 }
 .navbarbutton {
     float: right;
+
 }
 
 .navbarbutton a {
@@ -23,7 +28,65 @@
     background-color: #333;
 }
 .heading1 {
-    background-color: rgba(0, 0, 255, 0);
+    background-image: linear-gradient(gray,black);
     margin-top: -25px;
+    margin-bottom: -20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    color: white;
+    text-align: center;
+    font-size: large;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
+}
+
+/* Bottom of Page */
+
+.page_end {
+    background-image: linear-gradient(rgba(255, 255, 255, 0),black,black);
+    width: 100%;
+}
+
+.page_end-text {
+    font-size: medium;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-left: 10%;
+    margin-top: 2.5%;
+}
+
+/* Project CSS */
+
+.intro {
+    background-image: url(showcase_china.png);
+    padding-top: 120px;
+    padding-bottom: 120px;
+    max-height: 100%;
+    color: white;
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
+
+.project_column {
+    float: left;
+    width: 50%;
+  }
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+.proj_column_content {
+    background-color: white;
+    margin: 10px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif
+}
+
+.showcase {
+    padding: 20px;
+    text-align: center;
+}
+
